# scryer-prolog

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER_CONSOLIDATION_SUMMARY.md  DOCKER_WASI_BUILD.md  Makefile  README.md  WASI_BUILD_GUIDE.md  WASI_BUILD_STATUS.md  WASI_BUILD_SUMMARY.md  WASI_COMPONENT_IMPLEMENTATION.md  WASI_README.md  WASI_REORGANIZATION_COMPLETE.md  build-wasi-component.sh  docker-compose.yml  family.pl  test-component.py  test-docker-build.sh  test-wasi-component.js  test-wasi-memory-fix.sh  test.pl  test_component.js  test_component.py  wasi-build.sh  wasi-component-implementation-plan.md
.claude/: settings.local.json
.github/workflows/: wasi-build.yml  wasi-docker-build.yml
docs/: wasi-component.md
scripts/: build-wasi-component.sh  dev.sh  test-wasi-component.sh  wasi-docker.sh
src/: arena.rs  atom_table.rs  lib.rs  read.rs  wasi_component.rs
src/machine/: config.rs  dispatch.rs  machine_errors.rs  mod.rs  streams.rs  system_calls.rs
src/machine/lib_machine/: mod.rs
tests-pl/: iso-test-runner.pl  run-iso-simple.pl
wasi/: CI-CD.md  Dockerfile  README.md  build.sh  verify-structure.sh
wasi/cli/: Cargo.toml  simple.pl
wasi/cli-component/: Cargo.toml  README.md  build.rs  build.sh  test-build.sh
wasi/cli-component/examples/: family.pl  run-examples.sh
wasi/cli-component/src/: lib.rs  lib.rs.bak
wasi/cli-component/wit/: .gitignore  cli.wit  deps.toml
wasi/cli/src/: main.rs
wasi/full-cli/wit/: deps.toml  world.wit
wasi/simple-cli/: Cargo.toml
wasi/simple-cli/src/: main.rs
