[package]
name = "scryer-prolog-cli"
version = "0.1.0"
edition = "2021"
authors = ["Scryer Prolog Contributors"]
description = "CLI component for Scryer Prolog WASI library"
license = "BSD-3-Clause"

[dependencies]
wit-bindgen = "0.42.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true

[profile.dev]
opt-level = 2

[package.metadata.component]
package = "scryer:prolog-cli"

[package.metadata.component.dependencies]
"scryer:prolog" = { path = "wit" }

[package.metadata.component.target]
path = "wit/cli.wit"
world = "scryer-cli"

[build-dependencies]
wit-deps = "0.5.0"
